# serializer version: 1
# name: test_deploy_function_fully_qualified_name[ok]
  '''
  Creating stage: dev_deployment
  +------------------------------------------------------------------------------+
  | object                                                  | type     | status  |
  |---------------------------------------------------------+----------+---------|
  | custom_db.custom_schema.fqn_function(name string)       | function | created |
  | MockDatabase.custom_schema.fqn_function_only_schema(nam | function | created |
  | e string)                                               |          |         |
  | MockDatabase.custom_schema.schema_function(name string) | function | created |
  | custom_db.MockSchema.database_function(name string)     | function | created |
  | custom_db.custom_schema.database_function(name string)  | function | created |
  | custom_database.custom_schema.fqn_function3(name        | function | created |
  | string)                                                 |          |         |
  +------------------------------------------------------------------------------+
  
  '''
# ---
# name: test_deploy_function_fully_qualified_name_duplicated_database[database error]
  '''
  +- Error ----------------------------------------------------------------------+
  | Database provided but name                                                   |
  | 'custom_database.custom_schema.fqn_function_error' is fully qualified name.  |
  +------------------------------------------------------------------------------+
  
  '''
# ---
# name: test_deploy_function_fully_qualified_name_duplicated_schema[schema error]
  '''
  +- Error ----------------------------------------------------------------------+
  | Schema provided but name 'custom_schema.fqn_function_error' is fully         |
  | qualified name.                                                              |
  +------------------------------------------------------------------------------+
  
  '''
# ---
# name: test_deploy_function_secrets_without_external_access
  '''
  +- Error ----------------------------------------------------------------------+
  | func1 defined with secrets but without external integration.                 |
  +------------------------------------------------------------------------------+
  
  '''
# ---
